# teleGraph

./: LICENSE  README.md  pyproject.toml  scrapy_tele.ipynb  tele_graph.ipynb
teleGraph/: __init__.py  data_utils.py  edgelist.py  lang_utils.py  subgraphs.py  telescrap.py
